fixed the function calling issue

--- a/tool.ipynb
+++ b/tool.ipynb
@@ -77,6 +77,238 @@
     "    generation_config = config\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to extract relevant information for flight_id\n",
+    "def extract_flight_info(conversation_history):\n",
+    "    flight_number = None\n",
+    "    departure_date = None\n",
+    "\n",
+    "    for message in reversed(conversation_history):\n",
+    "        if not flight_number and \"flight number\" in message[\"content\"].lower():\n",
+    "            # Attempt to extract flight number (e.g., \"flight number is 123\")\n",
+    "            parts = message[\"content\"].lower().split(\"flight number\")\n",
+    "            if len(parts) > 1:\n",
+    "                flight_number = parts[1].strip()\n",
+    "                try:\n",
+    "                    flight_number = int(flight_number)  # Convert to integer\n",
+    "                except ValueError:\n",
+    "                    flight_number = None  # Reset if not a valid number\n",
+    "\n",
+    "        if not departure_date and \"departure date\" in message[\"content\"].lower():\n",
+    "            # Attempt to extract departure date (e.g., \"departure date is 2024-05-01\")\n",
+    "            parts = message[\"content\"].lower().split(\"departure date\")\n",
+    "            if len(parts) > 1:\n",
+    "                departure_date = parts[1].strip()\n",
+    "\n",
+    "        if flight_number and departure_date:\n",
+    "            break  # Found both, stop iterating\n",
+    "\n",
+    "    return flight_number, departure_date\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from services.flight_manager import find_flight_id,book_flight,search_flights,update_flight_booking,remove_flight_booking,find_customer_id,find_booking_id\n",
+    "def handle_response(response, chat_history):  # Pass chat history\n",
+    "    st.write(response)\n",
+    "    output = []\n",
+    "    st.write(response.candidates[0].content.parts)\n",
+    "    parts = response.candidates[0].content.parts\n",
+    "    for part in parts:\n",
+    "        if part.function_call.args:\n",
+    "            function_name = part.function_call.name\n",
+    "            function_args = part.function_call.args\n",
+    "\n",
+    "            function_params = {}\n",
+    "            for key in function_args:\n",
+    "                value = function_args[key]\n",
+    "                function_params[key] = value\n",
+    "\n",
+    "            results = \"\"\n",
+    "\n",
+    "            function_map = {\n",
+    "                \"book_flights\": book_flight,\n",
+    "                \"get_search_flights\": search_flights,\n",
+    "                \"remove_flight_booking\": remove_flight_booking,\n",
+    "                \"update_flight_booking\": update_flight_booking,\n",
+    "                \"find_flight_id\": find_flight_id,\n",
+    "                \"find_customer_id\": find_customer_id,\n",
+    "                \"find_booking_id\": find_booking_id,\n",
+    "            }\n",
+    "\n",
+    "            function_to_call = function_map.get(function_name)\n",
+    "\n",
+    "            # Handle flight_id extraction if book_flights is called\n",
+    "            if 'flight_id' in function_params :\n",
+    "                flight_number, departure_date = extract_flight_info(chat_history)  # Extract from chat history\n",
+    "                if flight_number and departure_date:\n",
+    "                        function_params['flight_id'] = find_flight_id(\n",
+    "                            flight_number=flight_number, departure_date=departure_date)\n",
+    "                        print(\"Found flight_id:\", function_params['flight_id'])\n",
+    "                   \n",
+    "            if function_to_call:\n",
+    "                try:\n",
+    "                    print(function_to_call)\n",
+    "                    print(function_params)\n",
+    "                    results = function_to_call(**function_params)\n",
+    "                    print(results)\n",
+    "                    # ... (rest of your result handling code)\n",
+    "                except Exception as e:\n",
+    "                    return f\"Error executing function '{function_name}': {str(e)}\"\n",
+    "            else:\n",
+    "                return f\"Error: Unknown function '{function_name}'\"\n",
+    "\n",
+    "            if results != \"\":\n",
+    "                intermediate_response = chat.send_message(\n",
+    "                    Part.from_function_response(\n",
+    "                        name=function_name,\n",
+    "                        response=results\n",
+    "                    )\n",
+    "                )\n",
+    "                st.write(intermediate_response)\n",
+    "                output.append(intermediate_response.candidates[0].content.parts[0].text)\n",
+    "\n",
+    "\n",
+    "            else:\n",
+    "                return \"Search Failed\"\n",
+    "        else:\n",
+    "            output.append(part.text)\n",
+    "    return output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "handle_response() missing 1 required positional argument: 'chat_history'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 103\u001b[0m\n\u001b[1;32m      1\u001b[0m response  \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\"\"\u001b[39m\u001b[38;5;124mcandidates \u001b[39m\u001b[38;5;124m{\u001b[39m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;124m  content \u001b[39m\u001b[38;5;124m{\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;124m    role: \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodel\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    100\u001b[0m \u001b[38;5;124m  total_token_count: 2342\u001b[39m\n\u001b[1;32m    101\u001b[0m \u001b[38;5;124m}\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[0;32m--> 103\u001b[0m output \u001b[38;5;241m=\u001b[39m \u001b[43mhandle_response\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresponse\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    104\u001b[0m \u001b[38;5;28mprint\u001b[39m(output)\n",
+      "\u001b[0;31mTypeError\u001b[0m: handle_response() missing 1 required positional argument: 'chat_history'"
+     ]
+    }
+   ],
+   "source": [
+    "response  = \"\"\"candidates {\n",
+    "  content {\n",
+    "    role: \"model\"\n",
+    "    parts {\n",
+    "      function_call {\n",
+    "        name: \"book_flights\"\n",
+    "        args {\n",
+    "          fields {\n",
+    "            key: \"seat_type\"\n",
+    "            value {\n",
+    "              string_value: \"economy\"\n",
+    "            }\n",
+    "          }\n",
+    "          fields {\n",
+    "            key: \"phone_number\"\n",
+    "            value {\n",
+    "              number_value: 222\n",
+    "            }\n",
+    "          }\n",
+    "          fields {\n",
+    "            key: \"num_seats\"\n",
+    "            value {\n",
+    "              number_value: 1\n",
+    "            }\n",
+    "          }\n",
+    "          fields {\n",
+    "            key: \"last_name\"\n",
+    "            value {\n",
+    "              string_value: \"De Silva\"\n",
+    "            }\n",
+    "          }\n",
+    "          fields {\n",
+    "            key: \"flight_id\"\n",
+    "            value {\n",
+    "              string_value: \"unknown\"\n",
+    "            }\n",
+    "          }\n",
+    "          fields {\n",
+    "            key: \"first_name\"\n",
+    "            value {\n",
+    "              string_value: \"Sanuthi\"\n",
+    "            }\n",
+    "          }\n",
+    "          fields {\n",
+    "            key: \"email\"\n",
+    "            value {\n",
+    "              string_value: \"sanuthi@gmail.com\"\n",
+    "            }\n",
+    "          }\n",
+    "          fields {\n",
+    "            key: \"date_of_birth\"\n",
+    "            value {\n",
+    "              string_value: \"2008-01-01\"\n",
+    "            }\n",
+    "          }\n",
+    "          fields {\n",
+    "            key: \"booking_date\"\n",
+    "            value {\n",
+    "              string_value: \"2024-08-21\"\n",
+    "            }\n",
+    "          }\n",
+    "        }\n",
+    "      }\n",
+    "    }\n",
+    "  }\n",
+    "  finish_reason: STOP\n",
+    "  safety_ratings {\n",
+    "    category: HARM_CATEGORY_HATE_SPEECH\n",
+    "    probability: NEGLIGIBLE\n",
+    "    probability_score: 0.172851562\n",
+    "    severity: HARM_SEVERITY_LOW\n",
+    "    severity_score: 0.2109375\n",
+    "  }\n",
+    "  safety_ratings {\n",
+    "    category: HARM_CATEGORY_DANGEROUS_CONTENT\n",
+    "    probability: NEGLIGIBLE\n",
+    "    probability_score: 0.353515625\n",
+    "    severity: HARM_SEVERITY_MEDIUM\n",
+    "    severity_score: 0.400390625\n",
+    "  }\n",
+    "  safety_ratings {\n",
+    "    category: HARM_CATEGORY_HARASSMENT\n",
+    "    probability: NEGLIGIBLE\n",
+    "    probability_score: 0.271484375\n",
+    "    severity: HARM_SEVERITY_NEGLIGIBLE\n",
+    "    severity_score: 0.13671875\n",
+    "  }\n",
+    "  safety_ratings {\n",
+    "    category: HARM_CATEGORY_SEXUALLY_EXPLICIT\n",
+    "    probability: NEGLIGIBLE\n",
+    "    probability_score: 0.142578125\n",
+    "    severity: HARM_SEVERITY_LOW\n",
+    "    severity_score: 0.241210938\n",
+    "  }\n",
+    "  avg_logprobs: -0.0099325869232416153\n",
+    "}\n",
+    "usage_metadata {\n",
+    "  prompt_token_count: 2278\n",
+    "  candidates_token_count: 64\n",
+    "  total_token_count: 2342\n",
+    "}\"\"\"\n",
+    "\n",
+    "output = handle_response(response)\n",
+    "print(output)\n"
+   ]
   }
  ],
  "metadata": {
@@ -95,7 +327,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
